# axebergos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  DOCUMENTATION_REVIEW.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  zensical.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: PROJECT_ANALYSIS.md  WORK_TRACKER.md  future-work.md  index.md
docs/architecture/: bare-metal.md
docs/decisions/: 001-wasm-target.md  002-async-executor.md  003-memory-filesystem.md  004-unix-like-interface.md  005-single-binary.md  006-cooperative-multitasking.md  README.md
docs/development/: building.md  contributing.md  invariants.md  testing.md
docs/guides/: adding-syscalls.md  custom-commands.md  vfs-backends.md
docs/kernel/: executor.md  ipc.md  memory.md  objects.md  overview.md  package-manager.md  processes.md  signals.md  syscalls.md  timers.md  tracing.md  users.md  wasm-modules.md  work-stealing.md
docs/plans/: bare-metal-boot.md  compositor.md
docs/userspace/: compositor.md  layered-fs.md  shell.md  stdio.md  vfs.md
examples/: 01-first-commands.md  02-working-with-files.md  03-pipes-and-redirects.md  04-users-and-permissions.md  05-adding-a-command.md  06-understanding-kernel.md  README.md
man/: Makefile  autosave.1.scd  base64.1.scd  basename.1.scd  bg.1.scd  cal.1.scd  cat.1.scd  cd.1.scd  chgrp.1.scd  chmod.1.scd  chown.1.scd  comm.1.scd  cp.1.scd  curl.1.scd  cut.1.scd  date.1.scd  devfs.5.scd  df.1.scd  diff.1.scd  dirname.1.scd  du.1.scd  echo.1.scd  edit.1.scd  expr.1.scd  fg.1.scd  find.1.scd  findmnt.1.scd  fold.1.scd  free.1.scd  fsload.1.scd  fsreset.1.scd  grep.1.scd  groupadd.1.scd  groups.1.scd  head.1.scd  hostname.1.scd  id.1.scd  intro.7.scd  ipcrm.1.scd  ipcs.1.scd  (+50 more)
man/compiled/: base64.1  basename.1  bg.1  cal.1  cat.1  cd.1  comm.1  cp.1  cut.1  date.1  df.1  diff.1  dirname.1  du.1  echo.1  edit.1  expr.1  fg.1  find.1  fold.1  free.1  grep.1  head.1  hostname.1  id.1  jobs.1  kill.1  ln.1  ls.1  man.1  mkdir.1  mv.1  nl.1  paste.1  printenv.1  printf.1  ps.1  pwd.1  rev.1  rm.1  (+21 more)
man/formatted/: base64.txt  basename.txt  bg.txt  cal.txt  cat.txt  cd.txt  comm.txt  cp.txt  cut.txt  date.txt  df.txt  diff.txt  dirname.txt  du.txt  echo.txt  edit.txt  expr.txt  fg.txt  find.txt  fold.txt  free.txt  grep.txt  head.txt  hostname.txt  id.txt  jobs.txt  kill.txt  ln.txt  ls.txt  man.txt  mkdir.txt  mv.txt  nl.txt  paste.txt  printenv.txt  printf.txt  ps.txt  pwd.txt  rev.txt  rm.txt  (+21 more)
prompts/: README.md  lessons-learned.md
prompts/architecture/: initial-design.md  kernel-structure.md
prompts/implementation/: multi-user.md  shell.md
rfd/: 0001-package-registry.md  README.md
scripts/: run-wasi.mjs
specs/tla/: HistoryBuffer.tla  PathValidation.tla  ProcessStateMachine.tla  README.md  SignalDelivery.tla  TimerQueue.tla  WorkStealing.cfg  WorkStealing.tla
src/: boot.rs  editor.rs  lib.rs  runtime.rs  terminal.rs
src/compositor/: geometry.rs  layout.rs  mod.rs  surface.rs  text.rs  window.rs
src/compositor/shaders/: rect.wgsl
src/kernel/: debugger.rs  devfs.rs  events.rs  executor.rs  fifo.rs  flock.rs  init.rs  invariants_test.rs  ipc.rs  memory.rs  memory_persist.rs  mod.rs  mount.rs  msgqueue.rs  network.rs  object.rs  process.rs  procfs.rs  profiler.rs  semaphore.rs  signal.rs  syscall.rs  sysfs.rs  task.rs  timer.rs  trace.rs  tty.rs  uds.rs  users.rs  visualizer.rs
src/kernel/pkg/: checksum.rs  database.rs  error.rs  installer.rs  manifest.rs  mod.rs  registry.rs  resolver.rs  version.rs
src/kernel/wasm/: WasmLoader.tla  abi.rs  command.rs  error.rs  executor.rs  loader.rs  mod.rs  runtime.rs  tests.rs  wasi_preview2.rs
src/kernel/work_stealing/: deque.rs  injector.rs  mod.rs
src/platform/: mod.rs  wasi.rs  web.rs
src/shell/: builtins.rs  executor.rs  filebrowser.rs  mod.rs  parser.rs  terminal.rs
src/shell/programs/: cron.rs  encoding.rs  file.rs  fs.rs  ipc.rs  mod.rs  mount.rs  net.rs  perms.rs  pkg.rs  process.rs  services.rs  shell.rs  system.rs  text.rs  tty.rs  user.rs
src/vfs/: layered.rs  memory.rs  mod.rs  persist.rs
tests/: integration.rs
