[package]
name = "axeberg"
version = "0.1.0"
edition = "2024"
description = "A personal mini-OS in Rust, compiled to WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# Async runtime - we build our own executor but need futures
futures = "0.3"
pin-project-lite = "0.2"

# For the VFS - efficient handle allocation
slab = "0.4"

# Serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For GPU buffer data casting
bytemuck = { version = "1.14", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    # Canvas (for WebGPU surface)
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    # WebGPU - feature names are snake_case
    "Gpu",
    "GpuAdapter",
    "GpuAdapterInfo",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "gpu_buffer_usage",
    "GpuCanvasConfiguration",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCullMode",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuLoadOp",
    "GpuMultisampleState",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "gpu_shader_stage",
    "GpuStoreOp",
    "GpuTexture",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "gpu_texture_usage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "GpuVertexStepMode",
    # OPFS (Origin Private File System) for persistence
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
    "File",
    "ReadableStream",
    # For beforeunload
    "BeforeUnloadEvent",
    # Clipboard API for copy/paste
    "Clipboard",
]

# Dev server (native only, not compiled to WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
